<resources>
    <string name="app_name">SAVR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="msg_username_or_email">Email</string>
    <string name="enter_email">enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">enter password</string>
    <string name="lbl_log_in">Login</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="google">Google</string>
    <string name="redirect_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="create_account">Create new account</string>
    <string name="enter_username">Username</string>
    <string name="redirect_to_sign_in">Already have an account? Login</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_transaction">Transactions</string>
    <string name="add_text">add transaction</string>
    <string name="lbl_settings">Settings</string>
    <string name="default_web_client_id">878297246219-se7deh08vfdhofk7bdkc7viag9ubqjkc.apps.googleusercontent.com</string>
    <string name="lbl_save">Save</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="lbl_new_category">New Category</string>
    <string name="lbl_cat_name">write...</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_notification_settings">Notifications</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_create_transaction">New Transaction</string>
    <string name="lbl_amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="msg_title">Enter title</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_date_hint">dd/MM/yyyy</string>
    <string name="lbl_update_transaction">Transation</string>
    <string name="lbl_home">Home</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="login_with">Login with</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="lbl_add_fingerprint">Add a fingerprint</string>
    <string name="lbl_close">Close</string>
    <string name="new_category">New category</string>
    <string name="new_category_created">New category created successfully</string>
    <string name="new_expense">New Expense</string>
    <string name="new_expense_created">New expense created successfully</string>
    <string name="new_income">New Income</string>
    <string name="new_income_created">New income created successfully</string>
    <string name="new_user">New user</string>
    <string name="user_registered">User registration successful!</string>
    <string name="lbl_analysis">Analysis</string>
    <string name="new_transaction_created">New transaction created.</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="lbl_ytansaction_type">Transaction type</string>
    <string name="sync">Sync</string>
    <string name="successful_sync">Sync was successful</string>
    <string name="fsiled_sync">Sync Failed!</string>
    <string name="select_transaction_type">Please select a transaction type!</string>
    <string name="select_category">Please select a category!</string>
    <string name="date_long">Invalid date format! Please use dd/MM/yyyy</string>
    <string name="invalid_date">Invalid date format!</string>
    <string name="required_date">Date is required!</string>
    <string name="must_be_number">Amount must be a positive number!</string>
    <string name="required_amount">Amount is required!</string>
    <string name="required_title">Title is required!</string>
    <string name="enter_category_name">Enter a category name!</string>
    <string name="get_icon">Select icon!</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="add">Add</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="income">Income</string>
    <string name="expenses">Expense</string>
</resources>