<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/transactions"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/transactions"/>

    <item
        android:id="@+id/categories"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/lbl_categories"/>

    <item
        android:id="@+id/analysis"
        android:icon="@drawable/baseline_bar_chart_24"
        android:title="@string/analysis"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_person_2_24"
        android:title="@string/settings"/>


</menu>