<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:lineSpacingExtra="15dp"
        android:singleLine="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/lbl_new_category"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etCategoryName"
        style="@style/etSolidRounded"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_bg_red_50_radius_18"
        android:ellipsize="end"
        android:hint="@string/lbl_cat_name"
        android:inputType="text"
        android:lineSpacingExtra="8dp"
        android:paddingStart="30dp"
        android:paddingTop="8dp"
        android:paddingEnd="30dp"
        android:paddingBottom="8dp"
        android:singleLine="true"
        android:textColorHint="@color/blue_gray_900_83"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/category_container"
        android:layout_marginTop="10dp"
        android:id="@+id/iconPicker"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:orientation="vertical"
            android:background="@drawable/icon_container"

            android:layout_marginStart="8dp"
            android:id="@+id/icon_image_container"
            android:gravity="center"
            android:padding="4dp"
            >
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/teal_900"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/iconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_icon"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/teal_900"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/btnSolidRounded"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="30dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:text="@string/lbl_save"
        android:textAllCaps="false"
        tools:text="@string/lbl_save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/btnSolidRounded_1"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:paddingStart="30dp"
        android:paddingTop="6dp"
        android:paddingEnd="30dp"
        android:paddingBottom="6dp"
        android:singleLine="true"
        android:text="@string/cancel_lbl"
        android:textAllCaps="false"
        tools:text="@string/cancel_lbl" />

</LinearLayout>